--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
+#Site settings
 baseurl = "/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-title = "Academic"
+title = "ljkstudio"
 copyright = "&copy; 2017 Lee Jae Kyung"
 theme = "academic"
 enableEmoji = true
@@ -7,6 +8,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
+publishDir = "Docs"
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
@@ -38,21 +40,21 @@ defaultContentLanguageInSubdir = false
   font = "default"
 
   # Your details.
-  name = "Lena Smith"
-  role = "Professor of Artificial Intelligence"
+  name = "leejaekyung"
+  role = "CEO of leejaekyung studio"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Stanford University", url = "" } ]
+  organizations = [ { name = "ljkstudio co.,ltd.", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
+  email = "leejaekyung@ljkstudio.com"
+  address = "23-5, Hwagok-ro35gil, Kangseo-gu, Seoul, KOREA"
   office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "888 888 88 88"
-  skype = "echo123"
-  telegram = ""
+  phone = "+82 10-6797-5447"
+  skype = "doodls83"
+  telegram = "@designersfinger"
 
   # Enable Keybase in Contact section by entering your keybase.io username.
   keybase = ""
@@ -66,12 +68,12 @@ defaultContentLanguageInSubdir = false
   #   Get your coords: Right-click place on Google Maps. Select 'What's here?'. At the bottom is a card with the coords.
   #   Disable Google Maps by clearing all three options to "".
   google_maps_api_key = ""
-  latitude = "37.4275"
-  longitude = "-122.1697"
+  latitude = "37.545754"
+  longitude = "126.842963"
 
   # Date format (refer to Go's date format: http://flippinggodateformat.com )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-  date_format = "Jan 2, 2006"
+  date_format = "Fab 16, 2008"
 
   # Show estimated reading time for posts?
   reading_time = true
@@ -171,13 +173,13 @@ defaultContentLanguageInSubdir = false
 
   [[params.social]]
     icon = "google-scholar"
-    icon_pack = "ai"
-    link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+    icon_pack = "bim"
+    link = ""
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
-    link = "//github.com/gcushen"
+    link = "//github.com/leejaekyung"
 
 
 # Navigation Links
