--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
-publishDir = "Docs"
+publishDir = "docs"
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
