--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 #Site settings
-baseurl = "/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
+baseurl = "https://leejaekyung.github.io/ljkstudio/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 title = "ljkstudio"
 copyright = "&copy; 2017 Lee Jae Kyung"
 theme = "academic"
