--- a/config.toml
+++ b/config.toml
@@ -1,231 +1,101 @@
 #Site settings
-baseurl = "https://leejaekyung.github.io/ljkstudio/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-title = "ljkstudio"
+baseurl = "https://leejaekyung.github.io/ljkstudio/"
+title = "Site Title | ljkstudio"
 copyright = "&copy; 2017 Lee Jae Kyung"
-theme = "academic"
-enableEmoji = true
-footnotereturnlinkcontents = "<sup>^</sup>"
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
-preserveTaxonomyNames = true
-paginate = 10
+theme = "paper-now"
 publishDir = "docs"
-
-# Enable comments by entering your Disqus shortname
-disqusShortname = ""
-
-# Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
-
-# Default language to use (if you setup multilingual support)
-defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = false
-
-[outputs]
-  home = [ "HTML", "CSS" ]
-
-# Configure BlackFriday Markdown rendering.
-#   See: https://gohugo.io/readfiles/bfconfig/
-[blackfriday]
-  hrefTargetBlank = true  # `true` opens external links in a new tab.
-  fractions = true  # `false` disables smart fractions (e.g. 5/12 formatted as a fraction).
-  smartypants = true  # `false` disables all smart punctuation substitutions (e.g. smart quotes, dashes, fractions).
+languageCode = "UTF-8"
+canonifyurls = true
 
 [params]
-  # Color theme.
-  #   Choose from `default`, `ocean`, `forest`, or `coffee`.
-  color_theme = "default"
+  googleAnalytics   = ""
+  pageNotFoundTitle = "404 - Page not found"
 
-  # Font style.
-  #   Choose from `default`, `classic`, or `playfair`.
-  font = "default"
+  articleTitle= "Human, AI &amp; Exoplanets"
+  publishDate = "2016-12-18"
+  doi         = ""
+  github      = ""
 
-  # Your details.
-  name = "leejaekyung"
-  role = "CEO of leejaekyung studio"
+[[params.authors]]
+    id    = "alice-exemplar"
+    name  = "Alice Exemplar"
+    email = "alice.exemplar@example.com"
+    url   = "http://example.com/authors/1"
+    orcid = "0000-0002-9298-3168"
 
-  # Organizations/Affiliations.
-  #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "ljkstudio co.,ltd.", url = "" } ]
+[[params.authors]]
+    id    = "bob-exemplar"
+    name  = "Bob Exemplar"
+    email = ""
+    url   = ""
+    orcid = "0000-0002-9341-7985"
 
-  gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
-  email = "leejaekyung@ljkstudio.com"
-  address = "23-5, Hwagok-ro35gil, Kangseo-gu, Seoul, KOREA"
-  office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "+82 10-6797-5447"
-  skype = "doodls83"
-  telegram = "@designersfinger"
+[[params.authors]]
+    id    = "em-exemplar"
+    name  = "EM Exemplar"
+    url   = "https://eueung.github.io"
 
-  # Enable Keybase in Contact section by entering your keybase.io username.
-  keybase = ""
+[[params.affiliations]]
+    name       = "Stanford University"
+    department = "Department of Mathematics"
+    location   = "Stanford, California, USA"
+    url        = "http://mathematics.stanford.edu/"
+    members    = ["alice-exemplar","bob-exemplar"]
 
-  # Diplay a logo in navigation bar rather than title (optional).
-  #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
-  logo = ""
+[[params.affiliations]]
+    name       = "Harvard University"
+    department = "Department of Molecular and Cellular Biology"
+    location   = "Cambridge, MA, USA"
+    url        = ""
+    members    = ["alice-exemplar"]
 
-  # Enable Google Maps by entering your API key, latitude, and longitude.
-  #   Get your API key: https://developers.google.com/maps/documentation/javascript/get-api-key
-  #   Get your coords: Right-click place on Google Maps. Select 'What's here?'. At the bottom is a card with the coords.
-  #   Disable Google Maps by clearing all three options to "".
-  google_maps_api_key = ""
-  latitude = "37.545754"
-  longitude = "126.842963"
+[[params.affiliations]]
+    name       = "Institut Teknologi Bandung"
+    department = "School of Electrical Engineering and Informatics"
+    location   = "Bandung, Indonesia"
+    url        = "https://stei.itb.ac.id/id/"
+    members    = ["em-exemplar"]
 
-  # Date format (refer to Go's date format: http://flippinggodateformat.com )
-  #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-  date_format = "Fab 16, 2008"
+[[params.funders]]
+    name   = "Medical Research Council"
+    url    = ""
+    sameAs = "http://doi.org/10.13039/501100000265"
+    [[params.funders.awards]]
+        name = "MRC123"
+        recipients = ["alice-exemplar", "bob-exemplar"]
+    [[params.funders.awards]]
+        name = "MRC456"
+        recipients = ["alice-exemplar", "bob-exemplar"]
 
-  # Show estimated reading time for posts?
-  reading_time = true
+[[params.funders]]
+    name   = "National Institutes of Health"
+    url    = "http://www.nih.gov/"
+    sameAs = "http://doi.org/10.13039/100000002"
+    [[params.funders.awards]]
+        name = "NIH123"
+        recipients = ["alice-exemplar"]
 
-  # Display comment count? Requires commenting to be enabled.
-  comment_count = true
+[[params.contributions]]
+    name = "Methodology"
+    url  = "http://dictionary.casrai.org/Contributor_Roles/Methodology"
+    contributors = [ "alice-exemplar", "bob-exemplar" ]
 
-  # Display section pager for posts?
-  section_pager = false
+[[params.contributions]]
+    name = "Investigation"
+    url  = "http://dictionary.casrai.org/Contributor_Roles/Investigation"
+    contributors = [ "alice-exemplar", "bob-exemplar" ]
 
-  # Enable global LaTeX math rendering?
-  #   If false, you can enable it locally on a per page basis.
-  math = false
+[[params.contributions]]
+    name = "Software"
+    url  = "http://dictionary.casrai.org/Contributor_Roles/Software"
+    contributors = [ "bob-exemplar" ]
 
-  # Highlight.js options
-  #   highlight
-  #     Enable global source code highlighting?  If false, you can
-  #     override it for a particular page in that page's preamble.
-  #
-  #     Example: highlight = true
-  #
-  #   highlight_languages
-  #     Add support for highlighting additional languages. Support for
-  #     languages mentioned here will be included in all pages. You
-  #     can also set this variable for a particular page in that
-  #     page's preamble.
-  #
-  #     Example: highlight_languages = ["go", "lisp", "ocaml"]
-  #
-  #   highlight_style
-  #     Choose a different CSS style for highlighting source
-  #     code. Setting this option in a page's preamble has no
-  #     effect.
-  #
-  #     Example: highlight_style = "github-gist"
-  #
-  #   For the list of supported languages and styles, see:
-  #   https://cdnjs.com/libraries/highlight.js/
-  #
-  #   For more info on the highlighting options, see:
-  #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
-  highlight = true
-  highlight_languages = []
-  # highlight_style = "github"
+[[params.contributions]]
+    name = "Writing - original draft"
+    url  = "http://dictionary.casrai.org/Contributor_Roles/Writing_%E2%80%93_original_draft"
+    contributors = [ "alice-exemplar" ]
 
-  # Enable native social sharing buttons?
-  sharing = true
-
-  # Link custom CSS and JS assets
-  #   (relative to /static/css and /static/js respectively)
-  custom_css = []
-  custom_js  = []
-
-  # Publication types.
-  #   Used to categorize publications.
-  #   The index of the publication type in the list is used as its unique numerical identifier.
-  #   The numeric ID is used in a publication's frontmatter to categorize it.
-  #   The language can be edited below.
-  #   For multi-lingual sites, copy this block to each language section at the end of this file.
-  publication_types = [
-    'Uncategorized',  # 0
-    'Conference proceedings',  # 1
-    'Journal',  # 2
-    'Work in progress',  # 3
-    'Technical report',  # 4
-    'Book',  # 5
-    'Book chapter'  # 6
-  ]
-
-  # Social/Academic Networking
-  #
-  # Icon pack "fa" includes the following social network icons:
-  #
-  #   twitter, weibo, linkedin, github, facebook, pinterest, google-plus,
-  #   youtube, instagram, soundcloud
-  #
-  #   For email icon, use "fa" icon pack, "envelope" icon, and
-  #   "mailto:your@email.com" as the link.
-  #
-  #   Full list: https://fortawesome.github.io/Font-Awesome/icons/
-  #
-  # Icon pack "ai" includes the following academic network icons:
-  #
-  #   google-scholar, arxiv, orcid, researchgate, mendeley
-  #
-  #   Full list: https://jpswalsh.github.io/academicons/
-
-  [[params.social]]
-    icon = "envelope"
-    icon_pack = "fa"
-    link = "mailto:leejaekyung@ljkstudio.com"
-
-  [[params.social]]
-    icon = "twitter"
-    icon_pack = "fa"
-    link = "//twitter.com/GeorgeCushen"
-
-  [[params.social]]
-    icon = "google-scholar"
-    icon_pack = "bim"
-    link = ""
-
-  [[params.social]]
-    icon = "github"
-    icon_pack = "fa"
-    link = "//github.com/leejaekyung"
-
-
-# Navigation Links
-#   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
-#     desired widget in your `content/home/` folder.
-#   The weight parameter defines the order that the links will appear in.
-
-[[menu.main]]
-  name = "Home"
-  url = "#about"
-  weight = 1
-
-[[menu.main]]
-  name = "Publications"
-  url = "#publications_selected"
-  weight = 2
-
-[[menu.main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 3
-
-[[menu.main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 4
-
-[[menu.main]]
-  name = "Teaching"
-  url = "#teaching"
-  weight = 5
-
-[[menu.main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 6
-
-# Taxonomies.
-[taxonomies]
-  tag = "tags"
-  category = "categories"
-  publication_type = "publication_types"
-
-# Languages
-#   Create a [languages.X] block for each language you want, where X is the language ID.
-
-# Configure the English version of the website.
-[Languages.en]
-  languageCode = "UTF-8"
+[[params.contributions]]
+    name = "Writing - review & editing"
+    url  = "http://dictionary.casrai.org/Contributor_Roles/Writing_%E2%80%93_review_%26_editing"
+    contributors = [ "bob-exemplar" ]
