--- a/config.toml
+++ b/config.toml
@@ -11,91 +11,57 @@ canonifyurls = true
   googleAnalytics   = ""
   pageNotFoundTitle = "404 - Page not found"
 
-  articleTitle= "Human, AI &amp; Exoplanets"
-  publishDate = "2016-12-18"
+  articleTitle= "Upgrading the Construction Execution Procedure: BIM viewer &amp; AR techonology for Installation of Free-form Structure"
+  publishDate = "2017-10-18"
   doi         = ""
   github      = ""
 
 [[params.authors]]
-    id    = "alice-exemplar"
-    name  = "Alice Exemplar"
-    email = "alice.exemplar@example.com"
-    url   = "http://example.com/authors/1"
-    orcid = "0000-0002-9298-3168"
+    id    = "leejaekyung"
+    name  = "LEE JAEKYUNG"
+    email = "leejaekyung@ljkstudio.com"
+    url   = "http://ljkstudio.com"
+    orcid = "0000-0003-4400-0435"
 
 [[params.authors]]
-    id    = "bob-exemplar"
-    name  = "Bob Exemplar"
+    id    = "park"
+    name  = "Park"
     email = ""
     url   = ""
     orcid = "0000-0002-9341-7985"
 
-[[params.authors]]
-    id    = "em-exemplar"
-    name  = "EM Exemplar"
-    url   = "https://eueung.github.io"
 
 [[params.affiliations]]
-    name       = "Stanford University"
-    department = "Department of Mathematics"
-    location   = "Stanford, California, USA"
-    url        = "http://mathematics.stanford.edu/"
-    members    = ["alice-exemplar","bob-exemplar"]
+    name       = "Seoul National University of Science and techonology"
+    department = "Department of Housing & Urban Development"
+    location   = "Seoul, KOREA"
+    url        = "http://gsh.seoultech.ac.kr/en/depart/develop/intro/"
+    members    = ["leejaekyung","Park"]
 
-[[params.affiliations]]
-    name       = "Harvard University"
-    department = "Department of Molecular and Cellular Biology"
-    location   = "Cambridge, MA, USA"
-    url        = ""
-    members    = ["alice-exemplar"]
 
-[[params.affiliations]]
-    name       = "Institut Teknologi Bandung"
-    department = "School of Electrical Engineering and Informatics"
-    location   = "Bandung, Indonesia"
-    url        = "https://stei.itb.ac.id/id/"
-    members    = ["em-exemplar"]
 
-[[params.funders]]
-    name   = "Medical Research Council"
-    url    = ""
-    sameAs = "http://doi.org/10.13039/501100000265"
-    [[params.funders.awards]]
-        name = "MRC123"
-        recipients = ["alice-exemplar", "bob-exemplar"]
-    [[params.funders.awards]]
-        name = "MRC456"
-        recipients = ["alice-exemplar", "bob-exemplar"]
-
-[[params.funders]]
-    name   = "National Institutes of Health"
-    url    = "http://www.nih.gov/"
-    sameAs = "http://doi.org/10.13039/100000002"
-    [[params.funders.awards]]
-        name = "NIH123"
-        recipients = ["alice-exemplar"]
 
 [[params.contributions]]
     name = "Methodology"
     url  = "http://dictionary.casrai.org/Contributor_Roles/Methodology"
-    contributors = [ "alice-exemplar", "bob-exemplar" ]
+    contributors = [ "leejaekyung" ]
 
 [[params.contributions]]
     name = "Investigation"
     url  = "http://dictionary.casrai.org/Contributor_Roles/Investigation"
-    contributors = [ "alice-exemplar", "bob-exemplar" ]
+    contributors = [ "leejaekyung", "Park" ]
 
 [[params.contributions]]
     name = "Software"
     url  = "http://dictionary.casrai.org/Contributor_Roles/Software"
-    contributors = [ "bob-exemplar" ]
+    contributors = [ "leejaekyung" ]
 
 [[params.contributions]]
     name = "Writing - original draft"
     url  = "http://dictionary.casrai.org/Contributor_Roles/Writing_%E2%80%93_original_draft"
-    contributors = [ "alice-exemplar" ]
+    contributors = [ "leejaekyung" ]
 
 [[params.contributions]]
     name = "Writing - review & editing"
     url  = "http://dictionary.casrai.org/Contributor_Roles/Writing_%E2%80%93_review_%26_editing"
-    contributors = [ "bob-exemplar" ]
+    contributors = [ "Park" ]
